reordered examples by numbers